--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.heimdall.entrypoints=websecure
-      - traefik.http.routers.heimdall.rule=Host(`^{domain}.com`)
+      - traefik.http.routers.heimdall.rule=Host(`^${DOMAIN}.com`)
 
 volumes:
   nfs:
